--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "prebuild": "cd .functions && npm i",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mooeypoo/dom-word-replacer": "^0.9.3",
     "core-js": "^3.6.5",
+    "node-fetch": "^2.6.1",
+    "parse5": "^6.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "xmldom": "^0.5.0",
+    "xmlserializer": "^0.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
