--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^0.7.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
