Swap the order of the replace function params
Go for /replace/{type}/{url} rather than having the type at the end.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   functions = ".functions"
 
 [[redirects]]
-	from = "/api/replace/:url/:type/"
+	from = "/api/replace/:type/:url/"
 	to = "/.netlify/functions/replace"
 	status = 200
 	force = true
