--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mooeypoo/dom-word-replacer": "^0.9.9",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "jsdom": "^16.5.3",
     "node-fetch": "^2.6.1",
