--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "parse5": "^6.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-share-buttons": "^1.1.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
